--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host/default/inputs.conf
@@ -1,8 +1,8 @@
-### About this file ###
-# The settings below are intended to provide a reasonable and functional example of data collection configurations.
-# You should review and determine if any adjustments should be made before being deployed to your environment based on your
-# organizations needs and requirements. To reduce license consumption consider reducing collection interval rates by
-# adjusting the current interval parameters or disabling specific inputs
+##
+## SPDX-FileCopyrightText: 2020 Splunk, Inc. <sales@splunk.com>
+## SPDX-License-Identifier: LicenseRef-Splunk-1-2020
+##
+##
 
 [WinEventLog://Application]
 checkpointInterval = 10
@@ -27,7 +27,6 @@ checkpointInterval = 10
 current_only = 0
 disabled = 0
 start_from = oldest
-
 
 ###### Host monitoring ######
 [WinHostMon://Application]
