Robbed initial version from seckit-ta for first review

--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host/default/inputs.conf
@@ -5,28 +5,22 @@
 ##
 
 [WinEventLog://Application]
-checkpointInterval = 10
-current_only = 0
 disabled = 0
-start_from = oldest
+#index = oswin
+renderXml=true
 
 [WinEventLog://Security]
-checkpointInterval = 10
-current_only = 0
 disabled = 0
-start_from = oldest
+blacklist1 = EventCode="4662" Message="Object Type:\s+(?!groupPolicyContainer)"
+blacklist2 = EventCode="566" Message="Object Type:\s+(?!groupPolicyContainer)"
+blacklist3 = EventCode="4688" Message="New Process Name: (?i)(?:[C-F]:\\Program Files\\Splunk(?:UniversalForwarder)?\\bin\\(?:btool|splunkd|splunk|splunk-(?:MonitorNoHandle|admon|netmon|perfmon|powershell|regmon|winevtlog|winhostinfo|winprintmon|wmi))\.exe)"
+#index = oswinsec
+renderXml=true
 
 [WinEventLog://System]
-checkpointInterval = 10
-current_only = 0
 disabled = 0
-start_from = oldest
-
-[WinEventLog://Setup]
-checkpointInterval = 10
-current_only = 0
-disabled = 0
-start_from = oldest
+#index = oswin
+renderXml=true
 
 ###### Host monitoring ######
 [WinHostMon://Application]
@@ -87,7 +81,14 @@ type = Processor
 #index = oswinscript
 
 [WinHostMon://Service]
-interval = 300
+interval = 3600
 disabled = 0
 type = Service
 #index = oswinscript
+
+#Some versions of the UF start collecting with this stanza we don't want that.
+[admon]
+disabled = 1
+
+[admon://default]
+disabled = 1
