Minor updates and tweaks per discussion with core team

--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host_metrics/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host_metrics/default/inputs.conf
@@ -14,18 +14,20 @@ object=Process
 mode=single
 useEnglishOnly=true
 sourcetype=PerfmonMetrics:Process
-index=itsi_im_metrics
+index=host_metrics
+_meta = entity_type::Windows_Host
 
 [perfmon://CPU]
 disabled=false
 counters=% C1 Time;% C2 Time;% Idle Time;% Processor Time;% User Time;% Reserved Time;% Interrupt Time;% Privileged Time;
-index=itsi_im_metrics
+index=host_metrics
 instances=*
 interval=60
 mode=single
 object=Processor
 sourcetype=PerfmonMetrics:CPU
 useEnglishOnly=true
+_meta = entity_type::Windows_Host
 
 [perfmon://LogicalDisk]
 disabled=false
@@ -36,7 +38,8 @@ object=LogicalDisk
 mode=single
 useEnglishOnly=true
 sourcetype=PerfmonMetrics:LogicalDisk
-index=itsi_im_metrics
+index=host_metrics
+_meta = entity_type::Windows_Host
 
 [perfmon://PhysicalDisk]
 disabled=false
@@ -47,7 +50,8 @@ object=PhysicalDisk
 mode=single
 useEnglishOnly=true
 sourcetype=PerfmonMetrics:PhysicalDisk
-index=itsi_im_metrics
+index=host_metrics
+_meta = entity_type::Windows_Host
 
 [perfmon://Memory]
 disabled=false
@@ -57,7 +61,8 @@ object=Memory
 mode=single
 useEnglishOnly=true
 sourcetype=PerfmonMetrics:Memory
-index=itsi_im_metrics
+index=host_metrics
+_meta = entity_type::Windows_Host
 
 [perfmon://Network]
 disabled=false
@@ -68,4 +73,5 @@ mode=single
 object=Network Interface
 useEnglishOnly=true
 sourcetype=PerfmonMetrics:Network
-index=itsi_im_metrics
+index=host_metrics
+_meta = entity_type::Windows_Host
