--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host/default/inputs.conf
@@ -6,7 +6,7 @@
 
 [WinEventLog://Application]
 disabled = 0
-#index = oswin
+index = oswin
 renderXml=true
 
 [WinEventLog://Security]
@@ -14,12 +14,12 @@ disabled = 0
 blacklist1 = EventCode="4662" Message="Object Type:\s+(?!groupPolicyContainer)"
 blacklist2 = EventCode="566" Message="Object Type:\s+(?!groupPolicyContainer)"
 blacklist3 = EventCode="4688" Message="New Process Name: (?i)(?:[C-F]:\\Program Files\\Splunk(?:UniversalForwarder)?\\bin\\(?:btool|splunkd|splunk|splunk-(?:MonitorNoHandle|admon|netmon|perfmon|powershell|regmon|winevtlog|winhostinfo|winprintmon|wmi))\.exe)"
-#index = oswinsec
+index = oswinsec
 renderXml=true
 
 [WinEventLog://System]
 disabled = 0
-#index = oswin
+index = oswin
 renderXml=true
 
 ###### Host monitoring ######
@@ -27,64 +27,64 @@ renderXml=true
 interval = 43200
 disabled = 0
 type = Application
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://Computer]
 interval = 43200
 disabled = 0
 type = Computer
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://Disk]
 #More frequent allowing for short searches with ITSI and ES
 interval = 600
 disabled = 0
 type = Disk
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://Driver]
 interval = 43200
 disabled = 0
 type = Driver
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://NetworkAdapter]
 interval = 43200
 disabled = 0
 type = NetworkAdapter
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://OperatingSystem]
 #More frequent allowing for short searches with ITSI and ES
 interval = 600
 disabled = 0
 type = OperatingSystem
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://Roles]
 interval = 43200
 disabled = 0
 type = Roles
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://Process]
 interval = 3600
 disabled = 0
 type = Process
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://Processor]
 #More frequent allowing for short searches with ITSI and ES
 interval = 600
 disabled = 0
 type = Processor
-#index = oswinscript
+index = oswinscript
 
 [WinHostMon://Service]
 interval = 3600
 disabled = 0
 type = Service
-#index = oswinscript
+index = oswinscript
 
 #Some versions of the UF start collecting with this stanza we don't want that.
 [admon]
