Added configs for windows host metrics and shell for AD

--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host_metrics/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host_metrics/default/inputs.conf
@@ -1,10 +1,9 @@
-### About this file ###
-# The settings below are intended to provide a reasonable and functional example of data collection configurations.
-# You should review and determine if any adjustments should be made before being deployed to your environment based on your
-# organizations needs and requirements. To reduce license consumption consider reducing collection interval rates by
-# adjusting the current interval parameters or disabling specific inputs
+##
+## SPDX-FileCopyrightText: 2020 Splunk, Inc. <sales@splunk.com>
+## SPDX-License-Identifier: LicenseRef-Splunk-1-2020
+##
+##
 
-# Metric inputs for ITE Work / ITSI entity type Windows
 [perfmon://Process]
 disabled=false
 counters=% Processor Time;% User Time;% Privileged Time;Elapsed Time;ID Process;Virtual Bytes;Working Set;Private Bytes;IO Read Bytes/sec;IO Write Bytes/sec;
@@ -12,7 +11,6 @@ instances=*
 interval=60
 object=Process
 mode=single
-useEnglishOnly=true
 sourcetype=PerfmonMetrics:Process
 index=host_metrics
 _meta = entity_type::Windows_Host
@@ -20,13 +18,12 @@ _meta = entity_type::Windows_Host
 [perfmon://CPU]
 disabled=false
 counters=% C1 Time;% C2 Time;% Idle Time;% Processor Time;% User Time;% Reserved Time;% Interrupt Time;% Privileged Time;
-index=host_metrics
 instances=*
 interval=60
-mode=single
 object=Processor
+mode=single
 sourcetype=PerfmonMetrics:CPU
-useEnglishOnly=true
+index=host_metrics
 _meta = entity_type::Windows_Host
 
 [perfmon://LogicalDisk]
@@ -36,7 +33,6 @@ instances=*
 interval=60
 object=LogicalDisk
 mode=single
-useEnglishOnly=true
 sourcetype=PerfmonMetrics:LogicalDisk
 index=host_metrics
 _meta = entity_type::Windows_Host
@@ -48,7 +44,6 @@ instances=*
 interval=60
 object=PhysicalDisk
 mode=single
-useEnglishOnly=true
 sourcetype=PerfmonMetrics:PhysicalDisk
 index=host_metrics
 _meta = entity_type::Windows_Host
@@ -59,7 +54,6 @@ counters=Page Reads/sec;Pages Input/sec;Pages Output/sec;Committed Bytes;Availab
 interval=60
 object=Memory
 mode=single
-useEnglishOnly=true
 sourcetype=PerfmonMetrics:Memory
 index=host_metrics
 _meta = entity_type::Windows_Host
@@ -71,7 +65,6 @@ instances=*
 interval=60
 mode=single
 object=Network Interface
-useEnglishOnly=true
 sourcetype=PerfmonMetrics:Network
 index=host_metrics
 _meta = entity_type::Windows_Host
