--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_ad/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_ad/default/inputs.conf
@@ -1,6 +1,262 @@
-##
-## SPDX-FileCopyrightText: 2020 Splunk, Inc. <sales@splunk.com>
-## SPDX-License-Identifier: LicenseRef-Splunk-1-2020
-##
-##
+###### OS Logs ######
+[WinEventLog://Application]
+disabled = 0
+index = <EVENT_INDEX>
 
+[WinEventLog://Security]
+disabled = 0
+index = <EVENT_INDEX>
+evt_resolve_ad_obj = 0
+
+[WinEventLog://System]
+disabled = 0
+index = <EVENT_INDEX>
+
+###### WinEventLog Inputs for Active Directory ######
+## Application and Services Logs - DFS Replication
+[WinEventLog://DFS Replication]
+disabled = 0
+index = <EVENT_INDEX>
+ 
+## Application and Services Logs - Directory Service
+[WinEventLog://Directory Service]
+disabled = 0
+index = <EVENT_INDEX>
+ 
+## Application and Services Logs - File Replication Service
+[WinEventLog://File Replication Service]
+disabled = 0
+index = <EVENT_INDEX>
+ 
+## Application and Services Logs - Key Management Service
+[WinEventLog://Key Management Service]
+disabled = 0
+index = <EVENT_INDEX>
+
+###### WinEventLog Inputs for DNS ######
+[WinEventLog://DNS Server]
+disabled=0
+index = <EVENT_INDEX>
+
+###### Windows Update Log ######
+
+## Enable below stanza to get WindowsUpdate.log for Windows 8, Windows 8.1, Server 2008R2, Server 2012 and Server 2012R2
+## [monitor://$WINDIR\WindowsUpdate.log]
+## disabled = 1
+## sourcetype = WindowsUpdateLog
+
+## Enable below powershell and monitor stanzas to get WindowsUpdate.log for Windows 10 and Server 2016
+## Below stanza will automatically generate WindowsUpdate.log daily
+[powershell://generate_windows_update_logs]
+disabled = 0
+index = <EVENT_INDEX>
+
+## Below stanza will monitor the generated WindowsUpdate.log in Windows 10 and Server 2016
+[monitor://$SPLUNK_HOME\var\log\Splunk_TA_windows\WindowsUpdate.log]
+disabled = 0
+index = <EVENT_INDEX>
+
+###### Monitor Inputs for Active Directory ######
+[monitor://$WINDIR\debug\netlogon.log]
+disabled=0
+index = <EVENT_INDEX>
+
+###### Scripted Input (See also wmi.conf)
+[script://.\bin\win_listening_ports.bat]
+disabled = 0
+index = <EVENT_INDEX>
+
+[script://.\bin\win_installed_apps.bat]
+disabled = 0
+index = <EVENT_INDEX>
+
+[script://.\bin\win_timesync_status.bat]
+disabled = 0
+index = <EVENT_INDEX>
+
+[script://.\bin\win_timesync_configuration.bat]
+disabled = 0
+index = <EVENT_INDEX>
+
+[script://.\bin\netsh_address.bat]
+disabled = 0
+index = <EVENT_INDEX>
+
+###### Scripted/Powershell Mod inputs Active Directory ######
+## Replication Information NT6
+# [script://.\bin\runpowershell.cmd nt6-repl-stat.ps1]
+# disabled=0
+# index = <EVENT_INDEX>
+ 
+## Replication Information 2012r2 and 2016
+[powershell://Replication-Stats]
+disabled=0
+index = <EVENT_INDEX>
+ 
+## Health and Topology Information NT6
+# [script://.\bin\runpowershell.cmd nt6-health.ps1]
+# disabled=0
+# index = <EVENT_INDEX>
+ 
+## Health and Topology Information 2012r2 and 2016
+[powershell://AD-Health]
+disabled=0
+index = <EVENT_INDEX>
+ 
+ 
+## Site, Site Link and Subnet Information NT6
+# [script://.\bin\runpowershell.cmd nt6-siteinfo.ps1]
+# disabled=0
+# index = <EVENT_INDEX>
+ 
+## Site, Site Link and Subnet Information 2012r2 and 2016
+[powershell://Siteinfo]
+disabled=0
+index = <EVENT_INDEX>
+
+##### Scripted Inputs for DNS #####
+## DNS Zone Information Collection
+[script://.\bin\runpowershell.cmd dns-zoneinfo.ps1]
+disabled=0
+index = <EVENT_INDEX>
+ 
+## DNS Health Information Collection
+[script://.\bin\runpowershell.cmd dns-health.ps1]
+disabled=0
+index = <EVENT_INDEX>
+
+###### Host monitoring ######
+[WinHostMon://Computer]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://Process]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://Processor]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://NetworkAdapter]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://Service]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://OperatingSystem]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://Disk]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://Driver]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinHostMon://Roles]
+disabled = 0
+index = <EVENT_INDEX>
+
+###### Splunk 5.0+ Performance Counters ######
+## CPU
+[perfmon://CPU]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:CPU
+
+## Logical Disk
+[perfmon://LogicalDisk]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:LogicalDisk
+
+## Physical Disk
+[perfmon://PhysicalDisk]
+disabled = 0 
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:PhysicalDisk
+
+## Memory
+[perfmon://Memory]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:Memory
+
+## Network
+[perfmon://Network]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:Network
+
+## Process
+[perfmon://Process]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:Process
+
+## ProcessInformation
+[perfmon://ProcessorInformation]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:ProcessInformation
+
+## System
+[perfmon://System]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:System
+
+###### Perfmon Inputs from TA-AD/TA-DNS ######
+[perfmon://DFS_Replicated_Folders]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:DFS_Replicated_Folders
+ 
+[perfmon://NTDS]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:NTDS
+
+[perfmon://DNS]
+disabled = 0
+mode = single
+index = itsi_im_metrics
+_meta = entity_type::Windows_Host
+sourcetype = PerfmonMetrics:DNS
+
+[WinRegMon://default]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinRegMon://hkcu_run]
+disabled = 0
+index = <EVENT_INDEX>
+
+[WinRegMon://hklm_run]
+disabled = 0
+index = <EVENT_INDEX>
