--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -5,4 +5,4 @@
 *       @jeffwiedemann
 
 # You can also use email addresses if you prefer.
-splunk-gdi-configurations-for-windows/*  @rfaircloth-splunk @jeffwiedemann
+splunk-gdi-configurations-for-windows/*  @rfaircloth-splunk @jeffwiedemann @jriggin
