Fixed missing metrics due to missing counters
There were a few metrics missing, so I did a sweeping review of all counters... I've updated them to match our current ITSI docs for getting windows metrics in... found here... https://docs.splunk.com/Documentation/ITSI/4.10.1/Entity/WindowsMetrics

--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host_metrics/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_host_metrics/default/inputs.conf
@@ -28,7 +28,7 @@ _meta = entity_type::Windows_Host
 
 [perfmon://LogicalDisk]
 disabled=false
-counters=Free Megabytes;
+counters=Free Megabytes;% Free Space;
 instances=*
 interval=60
 object=LogicalDisk
@@ -50,7 +50,7 @@ _meta = entity_type::Windows_Host
 
 [perfmon://Memory]
 disabled=false
-counters=Page Reads/sec;Pages Input/sec;Pages Output/sec;Committed Bytes;Available Bytes;
+counters=Cache Bytes;% Committed Bytes In Use;Page Reads/sec;Pages Input/sec;Pages Output/sec;Committed Bytes;Available Bytes
 interval=60
 object=Memory
 mode=single
@@ -60,11 +60,22 @@ _meta = entity_type::Windows_Host
 
 [perfmon://Network]
 disabled=false
-counters=Bytes Received/sec;Bytes Sent/sec;
+counters=Bytes Received/sec;Bytes Sent/sec;Packets Received/sec;Packets Sent/sec;Packets Received Errors;Packets Outbound Errors;
 instances=*
 interval=60
 mode=single
 object=Network Interface
 sourcetype=PerfmonMetrics:Network
 index=host_metrics
+_meta = entity_type::Windows_Host
+
+[perfmon://System]
+disabled = false
+counters = Processor Queue Length;Threads;System Up Time
+instances = *
+interval = 60
+mode = single
+object = System
+sourcetype = PerfmonMetrics:System
+index = host_metrics
 _meta = entity_type::Windows_Host
