--- a/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_ad/default/inputs.conf
+++ b/splunk-gdi-configurations-for-windows/core-splunk/spl_gdi_configs_uf_windows_ad/default/inputs.conf
@@ -2,32 +2,32 @@
 ## Application and Services Logs - DFS Replication
 [WinEventLog://DFS Replication]
 disabled = 0
-index = <EVENT_INDEX>
+index = oswin
  
 ## Application and Services Logs - Directory Service
 [WinEventLog://Directory Service]
 disabled = 0
-index = <EVENT_INDEX>
+index = oswinsec
  
 ## Application and Services Logs - File Replication Service
 [WinEventLog://File Replication Service]
 disabled = 0
-index = <EVENT_INDEX>
+index = oswin
  
 ## Application and Services Logs - Key Management Service
 [WinEventLog://Key Management Service]
 disabled = 0
-index = <EVENT_INDEX>
+index = oswinsec
 
 ###### WinEventLog Inputs for DNS ######
 [WinEventLog://DNS Server]
 disabled=0
-index = <EVENT_INDEX>
+index = oswin
 
 ###### Monitor Inputs for Active Directory ######
 [monitor://$WINDIR\debug\netlogon.log]
 disabled=0
-index = <EVENT_INDEX>
+index = oswinsec
 
 ###### Scripted/Powershell Mod inputs Active Directory ######
 ## Replication Information NT6
@@ -38,7 +38,7 @@ index = <EVENT_INDEX>
 ## Replication Information 2012r2 and 2016
 [powershell://Replication-Stats]
 disabled=0
-index = <EVENT_INDEX>
+index = oswinsec
  
 ## Health and Topology Information NT6
 # [script://.\bin\runpowershell.cmd nt6-health.ps1]
@@ -48,7 +48,7 @@ index = <EVENT_INDEX>
 ## Health and Topology Information 2012r2 and 2016
 [powershell://AD-Health]
 disabled=0
-index = <EVENT_INDEX>
+index = oswinsec
  
 ## Site, Site Link and Subnet Information NT6
 # [script://.\bin\runpowershell.cmd nt6-siteinfo.ps1]
@@ -58,102 +58,45 @@ index = <EVENT_INDEX>
 ## Site, Site Link and Subnet Information 2012r2 and 2016
 [powershell://Siteinfo]
 disabled=0
-index = <EVENT_INDEX>
+index = oswinsec
 
 ##### Scripted Inputs for DNS #####
 ## DNS Zone Information Collection
 [script://.\bin\runpowershell.cmd dns-zoneinfo.ps1]
 disabled=0
-index = <EVENT_INDEX>
+index = oswin
  
 ## DNS Health Information Collection
 [script://.\bin\runpowershell.cmd dns-health.ps1]
 disabled=0
-index = <EVENT_INDEX>
-
-###### Splunk 5.0+ Performance Counters ######
-## CPU
-[perfmon://CPU]
-disabled = 0
-mode = single
-index = itsi_im_metrics
-_meta = entity_type::Windows_Host
-sourcetype = PerfmonMetrics:CPU
-
-## Logical Disk
-[perfmon://LogicalDisk]
-disabled = 0
-mode = single
-index = itsi_im_metrics
-_meta = entity_type::Windows_Host
-sourcetype = PerfmonMetrics:LogicalDisk
-
-## Physical Disk
-[perfmon://PhysicalDisk]
-disabled = 0 
-mode = single
-index = itsi_im_metrics
-_meta = entity_type::Windows_Host
-sourcetype = PerfmonMetrics:PhysicalDisk
-
-## Memory
-[perfmon://Memory]
-disabled = 0
-mode = single
-index = itsi_im_metrics
-_meta = entity_type::Windows_Host
-sourcetype = PerfmonMetrics:Memory
-
-## Network
-[perfmon://Network]
-disabled = 0
-mode = single
-index = itsi_im_metrics
-_meta = entity_type::Windows_Host
-sourcetype = PerfmonMetrics:Network
-
-## Process
-[perfmon://Process]
-disabled = 0
-mode = single
-index = itsi_im_metrics
-_meta = entity_type::Windows_Host
-sourcetype = PerfmonMetrics:Process
+index = oswin
 
 ## ProcessInformation
 [perfmon://ProcessorInformation]
 disabled = 0
 mode = single
-index = itsi_im_metrics
+index = host_metrics
 _meta = entity_type::Windows_Host
 sourcetype = PerfmonMetrics:ProcessInformation
-
-## System
-[perfmon://System]
-disabled = 0
-mode = single
-index = itsi_im_metrics
-_meta = entity_type::Windows_Host
-sourcetype = PerfmonMetrics:System
 
 ###### Perfmon Inputs from TA-AD/TA-DNS ######
 [perfmon://DFS_Replicated_Folders]
 disabled = 0
 mode = single
-index = itsi_im_metrics
+index = host_metrics
 _meta = entity_type::Windows_Host
 sourcetype = PerfmonMetrics:DFS_Replicated_Folders
  
 [perfmon://NTDS]
 disabled = 0
 mode = single
-index = itsi_im_metrics
+index = host_metrics
 _meta = entity_type::Windows_Host
 sourcetype = PerfmonMetrics:NTDS
 
 [perfmon://DNS]
 disabled = 0
 mode = single
-index = itsi_im_metrics
+index = host_metrics
 _meta = entity_type::Windows_Host
 sourcetype = PerfmonMetrics:DNS
